--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -118,3 +118,12 @@ ul {
 li {
   font-size: 18px;
 }
+.footer {
+  color: #eee8e8;
+  font-size: 18px !important;
+  text-align: center !important;
+  font-family: Recursive, monospace !important;
+}
+.footer a {
+  font-weight: 400;
+}
