--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -88,10 +88,18 @@ h1 {
   font-weight: 500;
 }
 p.intro {
-  font-size: 2.5rem;
+  font-size: 1.9rem;
   margin-bottom: 20px;
   font-weight: 300;
   text-align: center !important;
+}
+@media (min-width: 43.75em) {
+  p.intro {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+    font-weight: 300;
+    text-align: center !important;
+  }
 }
 p {
   margin-bottom: 15px;
